crates/biome_js_type_info/tests/snapshots/infer_type_of_regex.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
/ab+c/;

```

## Result

```
regex: /ab+c/
```
