crates/biome_js_type_info/tests/snapshots/infer_type_of_tagged_template_literal.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
tag`foo`;

```

## Result

```
unknown
```
