crates/biome_js_type_info/tests/snapshots/infer_type_of_template_literal_with_substitution.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
`foo ${bar}`;

```

## Result

```
string
```
