crates/biome_js_type_info/tests/snapshots/infer_type_of_typeof_guard_narrowed_reference.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
if (typeof x === "string") {
	x;
}

```

## Result

```
Narrowed(typeof == "string", unresolved reference "x" (scope ID: 0))
```
